<resources>
    <string name="app_name">PracticeProject</string>
    <string name="welcome_text">Welcome!</string>
    <string name="button_text">Your position</string>
    <string name="bottom_sheet_peek">Your position</string>
    <string name="bottom_sheet_content">Your position</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="action1">Action 1</string>
    <string name="action2">Action 2</string>
    <string name="action3">Action 3</string>
    <string name="stations">Stations</string>
    <string name="places">Places</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="stationsList">List of metro stations</string>
    <string name="sightsList">List of sights</string>
    <string name="sight">Sight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>